# workspace

src/gazebo_tutorials/: CMakeLists.txt  package.xml
src/gazebo_tutorials/launch/: hello.launch  skate.launch  subs.launch  velodyne.launch
src/gazebo_tutorials/models/Carrinho/: carrinho.sdf  model.config
src/gazebo_tutorials/models/Carrinho_subs/: carrinho_subs.sdf  model.config
src/gazebo_tutorials/models/skate/: model.config  model.sdf
src/gazebo_tutorials/src/: CMakeLists.txt  model_push.cpp  model_subscriber.cpp  publisher.cpp  publisher.h  skate_plugin.cpp  velodyne_plugin.cpp
src/gazebo_tutorials/src/velodyne_plugin/: CMakeLists.txt
src/gazebo_tutorials/worlds/: model_push.world  model_subs.world  skate.world  velodyne.world
